--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.7",
-    "matrix-puppet-bridge": "matrix-hacks/matrix-puppet-bridge#decce78"
+    "matrix-puppet-bridge": "michaelnew/matrix-puppet-bridge"
   },
   "devDependencies": {
     "eslint": "^3.12.2"
